fixed a few issues including logo and sorting dates - my next commit will include wraparound dates - not just stopping at dec

--- a/src/index.css
+++ b/src/index.css
@@ -75,7 +75,7 @@ top: -15px;
 color: #fff;
 font-size: 3em;
 font-weight: bold;
-font-family: Baskerville;
+font-family: American Typewriter;
 text-shadow: 0 1px 0 #ccc, 0 2px 0 #c9c9c9, 0 3px 0 #bbb, 0 4px 0 #b9b9b9, 0 5px 0 #aaa, 0 6px 1px rgba(0,0,0,.1);
 }
 
@@ -216,6 +216,8 @@ table {
 
 .hidden {
   visibility: hidden;
+  height: 0px;
+  margins: 0px;
 }
 
 
